--- a/carp-admin/src/main/resources/static/css/common.css
+++ b/carp-admin/src/main/resources/static/css/common.css
@@ -1,3 +1,16 @@
 [v-cloak] {
     display: none;
 }
+
+.demo-table-expand {
+    font-size: 0;
+}
+.demo-table-expand label {
+    width: 90px;
+    color: #99a9bf;
+}
+.demo-table-expand .el-form-item {
+    margin-right: 0;
+    margin-bottom: 0;
+    width: 50%;
+}
